    + Rack map showing map of all racks in location;
    + Compact menu layout (per-user setting, showing only icons);
    + Network to network static nat;
    + API:
        + Encrypyted requests can now also be form-encoded (#1191);

    Translations:
    ----------------------------
    + French translation updated to verson 1.3;

    Bugfixes:
    ----------------------------
    + Fixed RACK images not displayed if not root location (#1204);
    + Fixed import gateway ip (#1240);
    + Fixed JSON_UNESCAPED_UNICODE for PHP 5.3 (#1135, #1245);
    + Rename class Thread to PingThread to avoid naming conflict with pthreads Thread class (#1254);
    + Fix custom fields integer on subnet (#1266);

== 1.3

    New features:
    ------------
    + Multicast module (RFC1112, RFC2464) with IP to MAC mapping and multicast networks overview;
    + Threshold module for subnets;
    + Racks module (Rack drawing) for devices;
    + Address linking by selected field;
    + Custom logo for site and mails;
    + PSTN number management module;
    + SNMP module:
        + Subnets discovery from route table (all subnets, nested subnets, add new subnet);
        + Hosts discovery scans via ARP check/interface check;
        + Hosts discovery scans via ARP + MAC address check (detects interface);
        + VLAN discovery;
        + VRF discovery;
        + Status update scans via ARP check;
    + NAT module
        + Source / static / destination NAT;
        + Linking subnet to NAT
        + Show bindings under tools and next to IP address / subnet
    + Locations module
        + Map devices / racks / subnets to location;
        + Google maps integration;
    + SAML2 authentication (SSO)

    Enhancements, changes:
    ----------------------------
    + Folders can now contain addresses;
    + API:
        - Api v1 removed;
        + If subnet gateway defined gatewayId is returned in subnet details;
        + Automatically added nameservers to subnet results;